src/objects/SLA__c.object
<CustomObject>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Account_Billing_Country__c, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Account_Billing_Country__c, 
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Account_Billing_State__c, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Account_Billing_State__c, 
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Last_Dial_Email_Date__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),

IF(Contact__r.Account.Last_Dial_Date__c &gt; Contact__r.Account.Last_Email_Date__c,
Contact__r.Account.Last_Dial_Date__c , Contact__r.Account.Last_Email_Date__c)

,

IF(NOT(ISBLANK(Lead__c)),

IF( Lead__r.Account__r.Last_Dial_Date__c  &gt; Lead__r.Account__r.Last_Email_Date__c ,
Lead__r.Account__r.Last_Dial_Date__c  , Lead__r.Account__r.Last_Email_Date__c )

,NULL)


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Last Dial / Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Lattice_Score__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Account.Lattice_Score__c, 
IF(NOT(ISBLANK(Lead__c)), 
IF(NOT(ISBLANK(Lead__r.Account__c)),Lead__r.Account__r.Lattice_Score__c,null),
null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Lattice Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Level__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),TEXT(Contact__r.Account.Account_Level__c), 
IF(NOT(ISBLANK(Lead__c)), 
IF(NOT(ISBLANK(Lead__r.Account__c)),TEXT( Lead__r.Account__r.Account_Level__c ),&quot;N/A&quot;), 
&quot;N/A&quot;))</formula>
        <label>Account Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Ops_New_Segment__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Account.Ops_new_segment__c, 
IF(NOT(ISBLANK(Lead__c)), 
IF(NOT(ISBLANK(Lead__r.Account__c)),Lead__r.Account__r.Ops_new_segment__c,&quot;N/A&quot;), 
&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Ops New Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Safe_ID__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Account_Safe_ID__c, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Account_Safe_ID__c , 
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status_Stamped__c</fullName>
        <description>Account Status stamped at SLA Create by CampaignMemeberCreateSLA Trigger</description>
        <label>Account Status (Stamped)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory_Label__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)), Contact__r.Account.Territory_Label__c , 
IF(NOT(ISBLANK(Lead__c)), Lead__r.Account__r.Territory_Label__c , 
&quot;&quot;))</formula>
        <label>Account Territory Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory_Owner_Team__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)), Contact__r.Territory_Owner_Team__c , 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Territory_Owner_Team__c, 
&quot;&quot;))</formula>
        <label>Account Territory Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory_Owner__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Territory_Owner__c, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Territory_Owner__c, 
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_VM_Count__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)), Contact__r.Account.VM_Count__c  , 
IF(NOT(ISBLANK(Lead__c)),  Lead__r.Account__r.VM_Count__c  , 
NULL))</formula>
        <label>Account VM Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bizible_Medium__c</fullName>
        <label>Bizible Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Detail__c</fullName>
        <formula>IF(BEGINS( Campaign__r.Name, &quot;CS&quot;),
IF(NOT(ISBLANK(Contact__c)), &quot;CS: &quot; &amp; Contact__r.Latest_WP_Download_Asset_Name__c , 
IF(NOT(ISBLANK(Lead__c)), &quot;CS: &quot; &amp; Lead__r.Latest_WP_Download_Asset_Name__c , 
&quot;&quot;)),Campaign__r.Name)</formula>
        <label>Campaign Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>CASE(LEFT( Campaign_Detail__c ,23),
&quot;INB: Operations Manager&quot;,&quot;(a) Inbound Product Download&quot;,
CASE(LEFT(Campaign_Detail__c ,8),
&quot;INB: VHM&quot;,&quot;(a) Inbound Product Download&quot;,
CASE(LEFT(Campaign_Detail__c ,4), 
&quot;CS: &quot;, &quot;(c) Content Syndication&quot;, 
&quot;3PT:&quot;, &quot;(d) Third Party&quot;, 
&quot;INB:&quot;, &quot;(b) Inbound Website&quot;,
&quot;(d) Other&quot;)))</formula>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SLAs</relationshipLabel>
        <relationshipName>SLAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closers_Club_RR__c</fullName>
        <formula>IF(Closers_Club_Territory__c,MOD(VALUE(SLA_Num__c),4)+1,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closers Club RR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closers_Club_Territory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closers Club Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Account__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Account.Name, 
IF(NOT(ISBLANK(Lead__c)),
IF(NOT(ISBLANK(Lead__r.Account__c)),Lead__r.Account__r.Name,Lead__r.Company),
&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company/Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SLAs</relationshipLabel>
        <relationshipName>SLAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Day_of_Week__c</fullName>
        <formula>CASE( MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, 
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Lead_Contact_Owner_Role__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)), 
Contact__r.Owner.User_Role_Name__c, 
IF(NOT(ISBLANK(Lead__c)), 
Lead__r.Owner:User.User_Role_Name__c, 
&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lead/Contact Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Lead_Contact_Owner_Team__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),
TEXT(Contact__r.Owner.Team__c),
IF(NOT(ISBLANK(Lead__c)),
TEXT(Lead__r.Owner:User.Team__c),
&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lead/Contact Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Lead_Contact_Owner__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Contact_Owner_text2__c,
IF(NOT(ISBLANK(Lead__c)),Lead__r.Lead_Owner_text2__c,
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lead/Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Lead_Score__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.mkto71_Lead_Score__c, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.mkto71_Lead_Score__c, 
null))</formula>
        <label>Current Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_creation__c</fullName>
        <formula>LastModifiedDate  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since creation</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Link__c</fullName>
        <description>Hyperlink for Associated Demo</description>
        <formula>If(NOT(ISBLANK(Demo__c)),&quot;https://eu4.salesforce.com/&quot;+Demo__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <label>Demo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dial_Count__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Dial_Count__c, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Dial_Count__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dial Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition_Detail__c</fullName>
        <description>Detail notes for Disposition Reason (Manual)</description>
        <inlineHelpText>Please elaborate on your Disposition Reason</inlineHelpText>
        <label>Disposition Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition_Reason_Manual__c</fullName>
        <description>Allows reps to manually disposition SLAs for Active Opportunities and Customers with Upsell Opp</description>
        <label>Disposition Reason (Manual)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Additional Opportunity</fullName>
                </value>
                <value>
                    <fullName>Recent Meeting</fullName>
                </value>
                <value>
                    <fullName>Directed Lead/Contact to Content</fullName>
                </value>
                <value>
                    <fullName>Bad Data</fullName>
                </value>
                <value>
                    <fullName>Connected - Declined Meeting</fullName>
                </value>
                <value>
                    <fullName>Lead/Contact not relevant to Virtualization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMEA_RR__c</fullName>
        <formula>IF(EMEA_Territory__c,MOD(VALUE(SLA_Num__c),4)+1,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMEA RR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Territory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EMEA Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hunchbacks_RR__c</fullName>
        <formula>IF(Hunchbacks_Territory__c,MOD(VALUE(SLA_Num__c),4)+1,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hunchbacks RR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hunchbacks_Territory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hunchbacks Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Country__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Account_Billing_Country__c, 
IF(NOT(ISBLANK(Lead__c)), Lead__r.Country_for_Assignment_Rules__c,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Created_Date__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.CreatedDate, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.CreatedDate,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Last_Dial_Date__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Last_Dial_Date__c, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Last_Dial_Date__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Last Dial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Full_Name__c, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Full_Name__c,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Owner_EMail__c</fullName>
        <label>Lead/Contact Owner EMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Safe_ID__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Contact_Safe_ID__c,   
IF(NOT(ISBLANK(Lead__c)), Lead__r.Lead_Safe_ID__c, 
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_State_Province__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.MailingState, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.State,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Status_Reason__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),TEXT(Contact__r.Status_Reason__c), 
IF(NOT(ISBLANK(Lead__c)),TEXT(Lead__r.CFCR_Status_Reason__c),&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Status Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Status__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),TEXT(Contact__r.Contact_Status__c), 
IF(NOT(ISBLANK(Lead__c)),TEXT(Lead__r.Status),&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Title_Clean__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Title_Clean__c, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Title_Clean__c,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Title (Clean)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Website__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Account.Website, 
IF(NOT(ISBLANK(Lead__c)), 
IF(NOT(ISBLANK(Lead__r.Account__c)),Lead__r.Account__r.Website,Lead__r.Website), 
&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Dial_Count_Since_Last_Status_Change__c</fullName>
        <formula>IF(NOT(ISBLANK(Lead__c)),Lead__r.Dial_Count_Since_Last_Status_Change__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Dial Count Since Last Status Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Email__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Email, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Email,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Inbound_Qualified_By__c</fullName>
        <formula>IF(NOT(ISBLANK(Lead__c)),Lead__r.Inbound_Qualified_By__c,&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Inbound Qualified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Inbound_Qualified_Date__c</fullName>
        <formula>IF(NOT(ISBLANK(Lead__c)),Lead__r.Inbound_Qualified_Date_Stamp__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Inbound Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Inbound_Qualified__c</fullName>
        <formula>IF(NOT(ISBLANK(Lead__c)),Lead__r.Inbound_Qualified__c,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Inbound Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Lead__c)),Lead__r.Full_Name__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Same_as_Current_User__c</fullName>
        <formula>IF(Current_Lead_Contact_Owner__c=$User.Full_Name__c,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Same as Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Phone_Number__c</fullName>
        <description>Phone Number pulled in from the Lead or Contact record</description>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Phone,
IF(NOT(ISBLANK(Lead__c)),Lead__r.Phone,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Delayed_Stamp__c</fullName>
        <description>The lead score from marketo recoreded 24 hours after SLA creation - filled by workflow: MQL Delayed Stamp on SLA</description>
        <label>Lead Score (Delayed Stamp)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Stamped__c</fullName>
        <description>Stamped at SLA Create</description>
        <label>Lead Score (Stamped)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),TEXT(Contact__r.LeadSource), 
IF(NOT(ISBLANK(Lead__c)),TEXT(Lead__r.LeadSource),&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Title__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Title, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.Title,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SLAs</relationshipLabel>
        <relationshipName>SLAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MQL_Date_Time_SLA__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.MQL_Date_Time__c, 
IF(NOT(ISBLANK(Lead__c)),Lead__r.MQL_Date_Time__c, 
null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL Date/Time (SLA)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SLAs</relationshipLabel>
        <relationshipName>SLAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ops_IT_Budget__c</fullName>
        <description>Ops IT Budget from account, to filter on Focus Accounts</description>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Account.Ops_IT_Budget__c,  
IF(NOT(ISBLANK(Lead__r.Account__c)),Lead__r.Account__r.Ops_IT_Budget__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ops IT Budget</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Contact_Owner__c</fullName>
        <label>Original Lead/Contact Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Contact_Territory_Owner__c</fullName>
        <label>Original Lead/Contact Territory Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rapid_Response_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rapid Response Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEC_RR__c</fullName>
        <formula>IF(SEC_Territory__c,MOD(VALUE(SLA_Num__c),4)+1,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEC RR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEC_Territory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEC Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_1_Due_Date__c</fullName>
        <description>Date value for when SLA 1 should be responded to. Set on Creation by SLA create trigger (CampaignMemberCreateSLA.trigger)</description>
        <label>SLA 1 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_1_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA 1 Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_2_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA 2 Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_3_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA 3 Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Connect_Count__c</fullName>
        <label>SLA Connect Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Conversation_Count__c</fullName>
        <label>SLA Conversation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Dial_Count__c</fullName>
        <label>SLA Dial Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process builder checks it if email is sent to Lead/Contact owner for qualified SLA.</description>
        <inlineHelpText>Do not edit.</inlineHelpText>
        <label>SLA Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Num__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>SLA Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SLA_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>SLA Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SLA_Owner_same_as_current_user__c</fullName>
        <formula>OwnerId=$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Owner same as current user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Status_Bucket_Granular__c</fullName>
        <description>Field for Ben Waller for SLA Dashboards</description>
        <formula>IF( 
OR( 
ISPICKVAL(SLA_Status__c,&quot;Closed (Demo Scheduled)&quot;) 
, 
ISPICKVAL(SLA_Status__c,&quot;Closed (Meeting Set)&quot;) 
) 
, 
&quot;(a) Meeting Set&quot; 
, 

IF( 
ISPICKVAL(SLA_Status__c,&quot;Closed (SLA Met)&quot;) 
, 
&quot;(b) Dispositioned - Dialed 7 Times&quot; 
, 

IF( 
AND( 
OR( 
ISPICKVAL(SLA_Status__c,&quot;Closed (New SLA Came In)&quot;) 
, 
ISPICKVAL(SLA_Status__c,&quot;Closed (Manually Dispositioned)&quot;) 
, 
ISPICKVAL(SLA_Status__c,&quot;Closed (Lead Dispositioned)&quot;) 
, 
ISPICKVAL(SLA_Status__c,&quot;Closed (Contact Dispositioned)&quot;) 
) 
, 
SLA_Dial_Count__c&gt;0 
, 
NOT(ISBLANK(SLA_Dial_Count__c)) 
) 
, 
&quot;(c) Dispositioned - Dialed&quot; 
, 

IF( 
AND( 
OR( 
ISPICKVAL(SLA_Status__c,&quot;Closed (New SLA Came In)&quot;) 
, 
ISPICKVAL(SLA_Status__c,&quot;Closed (Manually Dispositioned)&quot;) 
, 
ISPICKVAL(SLA_Status__c,&quot;Closed (Lead Dispositioned)&quot;) 
, 
ISPICKVAL(SLA_Status__c,&quot;Closed (Contact Dispositioned)&quot;) 
) 
, 
OR(SLA_Dial_Count__c=0,ISBLANK(SLA_Dial_Count__c)) 
) 
, 
&quot;(d) Dispositioned - No Dials&quot; 
, 

IF( 
AND( 
ISPICKVAL(SLA_Status__c,&quot;Closed (Expired)&quot;) 
, 
SLA_Dial_Count__c&gt;0 
, 
NOT(ISBLANK(SLA_Dial_Count__c)) 
) 
, 
&quot;(e) Expired - Dialed&quot; 
, 

IF( 
ISPICKVAL(SLA_Status__c,&quot;Closed (Expired)&quot;) 
, 
&quot;(g) Expired - No Dials&quot; 
, 

IF( 
AND( 
ISPICKVAL(SLA_Status__c,&quot;Open&quot;) 
, 
SLA_Dial_Count__c&gt;0 
, 
NOT(ISBLANK(SLA_Dial_Count__c)) 
) 
, 
&quot;(f) Open - Dialed&quot; 
, 

IF( 
ISPICKVAL(SLA_Status__c,&quot;Open&quot;) 
, 
&quot;(h) Open - Undialed&quot; 
, 

&quot;?&quot; 

))))))))</formula>
        <inlineHelpText>Buckets into: 
(a) Meeting Set 
(b) Dispositioned - Dialed 7 Times 
(c) Dispositioned - Dialed 
(d) Dispositioned - No Dials 
(e) Expired - Dialed 
(f) Expired - No Dials 
(g) Open - Dialed 
(h) Open - No Dials</inlineHelpText>
        <label>SLA Status Bucket Granular</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Status_Bucket__c</fullName>
        <description>SLA Bucket field for Ben Waller to use in Dashboard</description>
        <formula>IF(
  AND(
      ISPICKVAL(SLA_Status__c,&quot;Open&quot;)
      ,
      SLA_Dial_Count__c&gt;0
      ,
      NOT(ISBLANK(SLA_Dial_Count__c))
      )
,
&quot;(b) Open - Dialed&quot;
,

IF(
   ISPICKVAL(SLA_Status__c,&quot;Open&quot;)
,
&quot;(c) Open - Undialed&quot;
,

&quot;(a) Closed&quot;

))</formula>
        <inlineHelpText>Buckets into:
(a) Closed
(b) Open - Dialed
(c) Open - Undialed</inlineHelpText>
        <label>SLA Status Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Status__c</fullName>
        <label>SLA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed (New SLA Came In)</fullName>
                </value>
                <value>
                    <fullName>Closed (Expired)</fullName>
                </value>
                <value>
                    <fullName>Closed (Demo Scheduled)</fullName>
                </value>
                <value>
                    <fullName>Closed (SLA Met)</fullName>
                </value>
                <value>
                    <fullName>Closed (Manually Dispositioned)</fullName>
                </value>
                <value>
                    <fullName>Closed (Meeting Set)</fullName>
                </value>
                <value>
                    <fullName>Closed (Lead Dispositioned)</fullName>
                </value>
                <value>
                    <fullName>Closed (Contact Dispositioned)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMB_Territory_Owner_Acct__c</fullName>
        <description>SMB Territory Owner copied from the Account object</description>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.Account.SMB_Territory_Owner__r.Full_Name__c , 
IF(NOT(ISBLANK(Lead__c)), Lead__r.Account__r.SMB_Territory_Owner__r.Full_Name__c  ,  
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMB Territory Owner - Acct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Account__c</fullName>
        <description>Used by Ben Waller in Dashboards to show accounts with high SLA activity</description>
        <formula>IF(NOT(ISBLANK(Contact__c)),


&quot;(&quot;&amp;LEFT(Contact__r.Account.AE_Rep__r.FirstName,1)&amp; LEFT(Contact__r.Account.AE_Rep__r.LastName,1)&amp;&quot;) &quot;&amp;
Company_Account__c


,IF(NOT(ISBLANK(Lead__c)),


&quot;(&quot;&amp;LEFT( Lead__r.Account__r.AE_Rep__r.FirstName ,1)&amp; LEFT(Lead__r.Account__r.AE_Rep__r.LastName ,1)&amp;&quot;) &quot;&amp;
Company_Account__c

, Company_Account__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Territory Owner) Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Workflow_Rules__c</fullName>
        <label>Trigger Workflow Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WP_Download_Asset_Name__c</fullName>
        <description>Stamped Latest WP Download Asset Name from the Lead or Contact at SLA creation by Workflow rule</description>
        <label>WP Download Asset Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Fill__c</fullName>
        <label>Web Form Fill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wild_West_RR__c</fullName>
        <formula>IF(Wild_West_Territory__c,MOD(VALUE(SLA_Num__c),4)+1,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wild West RR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wild_West_Territory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wild West Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_if_Meeting_Set__c</fullName>
        <formula>IF( OR(ISPICKVAL(SLA_Status__c, &quot;Closed (Meeting Set)&quot;),ISPICKVAL(SLA_Status__c, &quot;Closed (Demo Scheduled)&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 if Meeting Set</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>